# MLB-Scout

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: stats-and-confidence.md
mlbpicker/: __init__.py  analytics.py  cli.py  config.py  features.py  gui.py  model.py  schemas.py
mlbpicker/data/: sample_game.json
mlbpicker/pipelines/: __init__.py  build_pitcher_context.py
mlbpicker/providers/: __init__.py  base.py  mlb_stats_provider.py  mock_provider.py  odds_provider.py  pybaseball_provider.py
mlbpicker/storage/: __init__.py  cache.py
tests/: test_analytics.py  test_mlb_stats_provider.py  test_odds_provider.py  test_pipeline.py  test_projection.py
