[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbpicker"
version = "0.1.0"
description = "Strikeout-focused MLB pitcher projection scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
pybaseball = [
  "pybaseball>=2.2.7",
]
gui = [
  "flet>=0.25",
]

[project.scripts]
mlb-k-picker = "mlbpicker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
